--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,19 @@
 {
   "hosting": {
-    "public": "out",
+    "public": ".next/standalone",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "cleanUrls": true,
     "trailingSlash": false,
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "function": "nextjsServer"
       }
     ]
+  },
+  "functions": {
+    "source": ".",
+    "codebase": "default",
+    "runtime": "nodejs18"
   }
 }
